<resources>
    <!--Home-->
    <string name="toolbar_title_home">Home</string>
    <string name="drawer_title_profile">Profile</string>
    <string name="drawer_title_group">Group</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_invite">Invite to group</string>
    <string name="drawer_title_sign_out">Sign out</string>
    <string name="bottom_nav_title_map">Map</string>
    <string name="bottom_nav_title_chat">Chat</string>
    <string name="bottom_nav_title_calendar">Calendar</string>
    <string name="bottom_nav_title_your_journeys">Journeys</string>
    <!--Chat-->
    <string name="chat_input_hint">Type a message…</string>
    <string name="toolbar_title_chat">Chat</string>
    <!--Calendar-->
    <string name="toolbar_title_calendar">Calendar</string>
    <string name="item_journey_seats_left">Seats left: %1$d</string>
    <string name="calendar_header_item_monday">M</string>
    <string name="calendar_header_item_tuesday">T</string>
    <string name="calendar_header_item_wednesday">W</string>
    <string name="calendar_header_item_thursday">T</string>
    <string name="calendar_header_item_friday">F</string>
    <string name="calendar_header_item_saturday">S</string>
    <string name="calendar_header_item_sunday">S</string>
    <string name="calendar_no_journeys">There are no journeys planned for the selected date. Only drivers can create journeys.</string>
    <!--Map-->
    <string name="toolbar_title_map">Map</string>
    <string name="map_window_title_destination">\'s destination</string>
    <string name="map_window_title_home">\'s home</string>
    <!--Profile-->
    <string name="toolbar_title_profile">Profile</string>
    <string name="profile_personal_info_title">Personal information</string>
    <string name="profile_stats_title">Statistics</string>
    <!--Edit Profile-->
    <string name="edit_profile_toolbar_title">Edit Profile</string>
    <string name="edit_profile_hint_name"><i>Name</i></string>
    <string name="edit_profile_hint_phone"><i>Phone number</i></string>
    <string name="edit_profile_hint_car_number"><i>Car number plate</i></string>
    <string name="edit_profile_hint_free_seats"><i>Amount of free seats</i></string>
    <string name="edit_profile_hint_email"><i>Email</i></string>
    <string name="edit_profile_title_name">Name</string>
    <string name="edit_profile_title_phone">Phone number</string>
    <string name="edit_profile_title_email">Email</string>
    <string name="edit_profile_title_driver_switch">Are you a driver?</string>
    <string name="edit_profile_title_car_number">Car number plate</string>
    <string name="edit_profile_title_free_seats">Amount of free seats</string>
    <!--Create Profile-->
    <string name="profile_create_toolbar_title">Create Profile</string>
    <string name="create_profile_home_title">Home address</string>
    <string name="create_profile_destination_title">Destination address (workplace,school etc.)</string>
    <!--Settings-->
    <string name="toolbar_title_settings">Settings</string>
    <!--Group-->
    <string name="toolbar_title_group">Your Group</string>
    <!--Journey Details-->
    <string name="toolbar_title_journey_details">Journey Details</string>
    <string name="journey_details_driver_stat">%1$d completed journeys as a driver</string>
    <string name="journey_details_car_number_plate"><b>Car number plate:</b> %1$s</string>
    <string name="journey_details_leaving_at"><b>Leaving at:</b> %1$s</string>
    <string name="journey_details_seats"><b>Seats:</b> %1$d / %2$d</string>
    <string name="journey_details_passenger_stat">%1$d completed journeys as a passenger</string>
    <string name="journey_details_button_book_a_seat">Book a seat</string>
    <string name="journey_details_cancel_booking">Cancel booking</string>
    <string name="journey_details_cancel_journey">Cancel journey</string>
    <string name="journey_details_title_driver">Driver</string>
    <string name="journey_details_title_journey">Journey</string>
    <string name="journey_details_title_passengers">Passengers</string>
    <string name="journey_details_title_drivers_note">Note from the driver</string>
    <string name="journey_details_no_passengers">Currently no passengers have booked a seat</string>
    <!--Upcoming Journeys-->
    <string name="toolbar_title_your_journeys">Upcoming journeys</string>
    <string name="journey_leaving_in">Leaving %1$s</string>
    <string name="journey_left">Left %1$s</string>
    <string name="journey_seats_left">Seats left:</string>
    <string name="upcoming_journeys_no_journeys">Currently no upcoming journeys.\n Create a journey or book a seat to see upcoming journeys here.</string>
    <!--Add Journey-->
    <string name="add_journey_departure_time_title">Departure time</string>
    <string name="add_journey_available_seats_title">Available seats</string>
    <string name="add_journey_additional_note_title">Additional note (Optional)</string>
    <string name="add_journey_note_hint">250 characters max</string>
    <string name="add_journey_time">%1$s:%2$s</string>
    <string name="add_journey_toolbar_title">Create journey</string>
    <string name="add_journey_from_address_title">Travel from:</string>
    <string name="add_journey_to_address_title">Travel to:</string>
    <!--Invite-->
    <string name="invite_email_subject">Join our Macavity group!</string>
    <string name="invite_email_body">Use the code below to join our group at Macavity app: \n\n%1$s</string>
    <string name="invite_copy_success">Link copied to clipboard</string>
    <string name="invite_toolbar_title">Invite friends</string>
    <string name="invite_title">Share this code with a friend you wish to add to your group</string>
    <!--Tutorial-->
    <string name="tutorial_toolbar_title">Tutorial</string>
    <string name="tutorial_text_page_1">Create a profile which will only be revealed to people you trust</string>
    <string name="tutorial_text_page_2">Join a group of people you\'re going to commute with or create a new group and invite others</string>
    <string name="tutorial_text_page_3">Schedule journeys and book seats using the calendar</string>
    <string name="tutorial_text_page_4">Use built in chat to communicate with your group members</string>
    <string name="tutorial_text_page_5">Built in map indicates the home locations and commute destinations of your group members for easier navigation</string>
    <!--Create Group-->
    <string name="create_group_toolbar_title">Welcome</string>
    <string name="create_group_description">To use the application you must be a part of a group. To join an existing group please ask a member of a group for an invitation code. Otherwise create a new group.</string>
    <string name="create_group_button">Create Group</string>
    <!--Sign In-->
    <string name="sign_in_toolbar_title">Sign in</string>
    <string name="sign_in_description">We take your privacy and security seriously, that\'s why we only allow trusted and secure sign in method.</string>
    <!--Keys-->
    <!--TODO: find a better solution-->
    <string name="web_client">769984106768-k1l8aahnf07pfg7fsg83s45ou2dsdnrn.apps.googleusercontent.com</string>
    <string name="places_api_key">AIzaSyBFAKKZIOg_zVnIj_n26Dco8-9ehWvZp8c</string>
    <!--Global-->
    <string name="app_name">Macavity</string>
    <string name="default_error_message">Oops, something went wrong</string>
    <string name="error_incorrect_address">Incorrect address</string>
    <string name="error_select_date">Please select a date</string>
</resources>
