<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:background="@color/blue_light">

    <TextView
        android:id="@+id/first"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_monday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_tuesday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_wednesday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fourth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/second"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fourth"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_thursday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fifth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/third"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fifth"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_friday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sixth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourth"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sixth"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_saturday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seventh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fifth"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seventh"
        style="@style/calendar_month_header_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_header_item_sunday"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sixth"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>