<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".ui.editProfile.EditProfileFragment">

    <com.example.macavity.ui.widgets.Toolbar_
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit_avatar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_edit"
                android:tint="@color/amber_primary"
                app:layout_constraintBottom_toBottomOf="@id/profile_avatar"
                app:layout_constraintEnd_toEndOf="@id/profile_avatar" />

            <TextView
                android:id="@+id/name_title"
                style="@style/edit_text_title"
                android:layout_marginTop="32dp"
                android:text="@string/edit_profile_title_name"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/profile_avatar" />

            <EditText
                android:id="@+id/name"
                style="@style/edit_text"
                android:layout_marginTop="4dp"
                android:hint="@string/edit_profile_hint_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/name_title" />

            <TextView
                android:id="@+id/phone_title"
                style="@style/edit_text_title"
                android:layout_marginTop="8dp"
                android:text="@string/edit_profile_title_phone"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/phone"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/phone"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <EditText
                android:id="@+id/phone"
                style="@style/edit_text"
                android:layout_marginTop="4dp"
                android:hint="@string/edit_profile_hint_phone"
                android:inputType="phone"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/phone_title" />

            <TextView
                android:id="@+id/email_title"
                style="@style/edit_text_title"
                android:layout_marginTop="8dp"
                android:text="@string/edit_profile_title_email"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <EditText
                android:id="@+id/email"
                style="@style/edit_text"
                android:layout_marginTop="4dp"
                android:hint="@string/edit_profile_hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/email_title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/driver_switch_title"
                style="@style/edit_text_title"
                android:layout_marginTop="16dp"
                android:text="@string/edit_profile_title_driver_switch"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/driver_switch"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <Switch
                android:id="@+id/driver_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/driver_switch_title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/car_number_plate_title"
                style="@style/edit_text_title"
                android:layout_marginTop="8dp"
                android:text="@string/edit_profile_title_car_number"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/car_number_plate"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/car_number_plate"
                app:layout_constraintTop_toBottomOf="@+id/driver_switch" />

            <EditText
                android:id="@+id/car_number_plate"
                style="@style/edit_text"
                android:layout_marginTop="4dp"
                android:hint="@string/edit_profile_hint_car_number"
                android:inputType="text"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/car_number_plate_title" />

            <TextView
                android:id="@+id/car_seats_title"
                style="@style/edit_text_title"
                android:layout_marginTop="8dp"
                android:text="@string/edit_profile_title_free_seats"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/car_seats"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/car_seats"
                app:layout_constraintTop_toBottomOf="@+id/car_number_plate" />

            <EditText
                android:id="@+id/car_seats"
                style="@style/edit_text"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/edit_profile_hint_free_seats"
                android:inputType="number"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/car_seats_title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>